<resources>
    <string name="app_name">UHeadMaster</string>
    <string name="internet_message">Please, Check your connection!.</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="or_sign_in_with">Or Sign in With</string>
    <string name="please_create_your_new_account">Please Create Your New Account</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="click_here">Click Here</string>
    <string name="reset">Reset</string>
    <string name="please_sign_in_with_your_e_mail">Please Sign in With Your E-mail</string>
    <string name="enter_your_e_mail_below_to_reset_your_password">Enter Your E-mail Below to reset your password</string>
    <string name="browse_courses">Browse Courses</string>
    <string name="create_new_account">Create new account</string>
    <string name="close">Close</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_have_account">I Have Account</string>
    <string name="sinOut_sign_in">Sign in</string>
    <string name="name_required">You should enter your Name!.</string>
    <string name="email_required">You should enter your E-mail!.</string>
    <string name="password_required">You should enter Password!.</string>
    <string name="password_not_match">Your password don\'t match!.</string>
    <string name="email_format">E-mail Address in invalid format!.</string>
    <string name="facebook_app_id">110941039577941</string>
    <string name="server_key">lHmTZOLHUcDgWImY3fZDvMnCmsJg3IyCjYQolwDlVeFIxBdiXC4frsDXlR</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="my_courses">My Courses</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="policy">Policy</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="feedback">FeedBack</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="check_out">Check Out</string>
    <string name="explore_courses">Explore Courses</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="more">More</string>
    <string name="learning_courses">Learning Courses</string>
    <string name="wish_list">Wish List</string>
    <string name="paid_courses">Paid Courses</string>
    <string name="free_courses">Free Courses</string>
    <string name="pay_via">Pay Via</string>
    <string name="about_course">About Course</string>
    <string name="instructor">Instructor</string>
    <string name="reviews">View Reviews</string>
    <string name="write_review">Write reviews</string>
    <string name="description">Description</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="content">Content</string>
    <string name="provider">Provider</string>
    <string name="comment">Your Comment</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="hours">Hourse :</string>
    <string name="price">Price :</string>
    <string name="langauge"> Langauge </string>
    <string name="lec">Lec</string>
    <string name="lecture">Lecture :</string>
    <string name="abuse">Abuse</string>
    <string name="save">Save</string>
    <string name="upload">Upload</string>
    <string name="user_name">User Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="show_my_profile_on_search_engine">Show my profile on search engine</string>
    <string name="client_id">Client ID</string>
    <string name="client_password">Client Password</string>
    <string name="status">Status</string>
    <string name="as_a_student">As a Student</string>
    <string name="as_a_instructor">As a Instructor</string>
    <string name="recieve_promotion_course_recommendations">Recieve Promotion , Course Recommendations</string>
    <string name="recieve_announcements_from_instructors">Recieve Announcements from instructors</string>
    <string name="recieve_emails_on_helpful_resources_important_updates">Recieve emails on helpful resources , Important Updates</string>
    <string name="don_t_send_any_promomtional_emails">Don\'t Send any Promomtional emails</string>
    <string name="delete">Delete</string>
    <string name="subscribe_auto_send_email_for_any_social_resources">Subscribe , auto send email for any social resources</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="delete_course">Delete Course</string>
    <string name="you_have_to_delete_the_course_in_your_account_first">You have to delete the course in your account first</string>
    <string name="group_name">Group Name</string>
    <string name="update">Update</string>
    <string name="basic_profile">Basic Profile</string>
    <string name="account">Account</string>
    <string name="privacy">Privacy</string>
    <string name="api_client">API Client</string>
    <string name="notification">Notification</string>
    <string name="delete_account">Delete Account</string>
    <string name="subscribe">Subscribe/UnSubScribe</string>
    <string name="credit_card">Credit Card</string>
    <string name="use_transaction_information">Use Transaction information for further purchase</string>
    <string name="student_visa_number">Student visa number</string>
    <string name="choose_image">Please Choose An Image</string>
    <string name="fill_data">Please Fill All Data</string>
    <string name="profile_updated">Profile Updated Successfully</string>
    <string name="check_internet_connection">Please Check Your Internet Connection</string>
    <string name="password_match">New Password and it\'s Confirmation must be match</string>
    <string name="password_changed">Password Updated Successfully</string>
    <string name="course_in_cart">" Courses in Cart"</string>
    <string name="total_payment">"Total Payment : "</string>
    <string name="no_category_has_id">No Categpry has this ID !.</string>
    <string name="sub_category">SubCategories</string>
    <string name="not_instructoe">User is not an instructor</string>
    <string name="no_found">User Not Found</string>
    <string name="category_not_choosed">You haven\'t choosed Category Yet</string>
    <string name="no_result_for_this_search">No Result For This Search</string>
    <string name="mobil_number">Mobil number</string>
    <string name="country_code">Country Code</string>
    <string name="no_changes">You Have Made No Changes Yet</string>
    <string name="url">Url</string>
    <string name="the_old_email">New e-mail is the same of old e-mail!.</string>
    <string name="email_null">Your e-mail is null.!</string>
    <string name="done">Done!</string>
    <string name="text_with_bullet">\u2022</string>
    <string name="press_again">Press again to exit</string>
    <string name="langauges">English</string>
    <string name="language_word">Language</string>
    <string name="change_langauge_message">تغير لغة التطبيق للغه العربيه.!</string>
    <string name="cancel_en">الغاء</string>
    <string name="change">تغير</string>
    <string name="message_confirm">رسالة تأكيدية</string>
    <string name="lectures">Lectures</string>
    <string name="questions_answers"><![CDATA[Q & A]]></string>
    <string name="announcements">Announcements</string>
    <string name="resources">Resources</string>
    <string name="submit_your_response">Submit Your Response</string>
    <string name="start_course">Start Course</string>
    <string name="preview">Preview</string>
    <string name="buy_course">Buy Course</string>
    <string name="enroll_course">Enroll Course</string>
    <string name="enrolled">Enrolled</string>
    <string name="course_details">Course Details</string>
    <string name="enter_question_title">Enter Question Title</string>
    <string name="enter_question_details">Enter Question Details</string>
    <string name="no_responses">There is no Comments yet</string>
    <string name="response">Responses</string>
    <string name="enter_all_fields">You Should enter data in all fields!</string>
    <string name="view_example">JWPlayerView Example</string>
    <string name="media_route_menu_title">Cast</string>
    <string name="become_instructor">Become Instructor</string>
    <string name="dashboard">Dashboard</string>
    <string name="create_course">Create Course</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="total_students">Total Students</string>
    <string name="rating">Rating</string>
    <string name="course_created">Course Created</string>
    <string name="more_courses">More Courses</string>
    <string name="published">Published</string>
    <string name="draft">Draft</string>
    <string name="title_asceding">Title A-Z</string>
    <string name="title_descading">Title Z-A</string>
    <string name="student_engagment">Student Engagment</string>
    <string name="average_rating">Average Rating</string>
    <string name="number_of_nwely_enrolled_student">Number Of nwely enrolled student</string>
    <string name="num_active_students">Number Of active Students</string>
    <string name="your_answer">your answer</string>
    <string name="add_answer">Add Answer</string>
    <string name="questions_answer"><![CDATA[Questions & Answer]]></string>
    <string name="instructor_reviews">Reviews</string>
    <string name="create_announcement">Create Announcement</string>
    <string name="title">Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="create">Create</string>
    <string name="automatic_messages">Automatic Messages</string>
    <string name="welcome_message">Welcome Message</string>
    <string name="message">Message</string>
    <string name="congrate_message">Congratulations Messages</string>
    <string name="convertion_analysis">Convertion Analysis</string>
    <string name="roadmap">Roadmap</string>
    <string name="course_goal">Course Goal</string>
    <string name="course_prequests">Does Your Course Have any Prequests?</string>
    <string name="course_target">Who is your target student?</string>
    <string name="course_learn">What will they learn? at the end of your course, Student will be able to.....</string>
    <string name="course_info">Course Info</string>
    <string name="course_title">Course Title</string>
    <string name="language">Language</string>
    <string name="category">Category</string>
    <string name="instruction_level">Instruction Level</string>
    <string name="course_summary">Course Summary</string>
    <string name="add">Add</string>
    <string name="question_answer"><![CDATA[Questions & Answer]]></string>
    <string name="content_consumed_past_3_months">Content Consumed Past 3 months</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="analysis_of_landing_page_visits">Analysis of landing page visits</string>
    <string name="lets_get_start_to_create_new_course_write_the_title_below">lets get start to create new course write the title below</string>
    <string name="course_name">Course Name</string>
    <string name="subtitle">Subtitle</string>
    <string name="next">Next</string>
    <string name="quiz">Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are You Sure You Want To Delete Your Account?</string>
</resources>