<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@mipmap/ic_home_menu"
            android:title="@string/home"
            />
        <item
            android:id="@+id/categories"
            android:icon="@mipmap/promos"
            android:title="@string/categories"
            />

        <item
            android:id="@+id/courses"
            android:icon="@mipmap/ic_courses_menu"
            android:title="@string/my_courses"
            />
        <item
            android:id="@+id/shopping_cart"
            android:icon="@mipmap/purchases"
            android:title="@string/shopping_cart"
            />

        <item
            android:id="@+id/edit_profile"
            android:icon="@mipmap/social"
            android:title="@string/edit_profile"
            />

        <item
            android:id="@+id/policy"
            android:icon="@mipmap/spam"
            android:title="@string/policy"
            />

        <item
            android:id="@+id/settings"
            android:icon="@mipmap/spam"
            android:title="@string/settings"
            />

        <item
            android:id="@+id/logout"
            android:icon="@mipmap/inbox"
            android:title="@string/logout" />
    </group>
</menu>