<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15w"
            android:layout_marginTop="@dimen/dp10h"
            android:text="@string/as_a_student"
            android:textColor="@color/dark_gray_color"
            android:textSize="@dimen/sp15"
            android:textStyle="bold" />\

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp15w"
            android:layout_marginStart="@dimen/dp15w"
            android:layout_marginTop="@dimen/dp5h"
            android:background="@color/open_gray_color"
            android:orientation="vertical">

            <CheckBox

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp5w"
                android:layout_marginStart="@dimen/dp5w"
                android:layout_marginTop="@dimen/dp15h"
                android:buttonTint="@color/colorAccent"
                android:text="@string/recieve_promotion_course_recommendations"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp12"
                android:textStyle="bold" />

            <CheckBox

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp15h"
                android:layout_marginEnd="@dimen/dp5w"
                android:layout_marginStart="@dimen/dp5w"
                android:layout_marginTop="@dimen/dp15h"
                android:buttonTint="@color/colorAccent"
                android:text="@string/recieve_announcements_from_instructors"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp12"
                android:textStyle="bold" />


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15w"
            android:layout_marginTop="@dimen/dp25h"
            android:text="@string/as_a_instructor"
            android:textColor="@color/dark_gray_color"
            android:textSize="@dimen/sp15"
            android:textStyle="bold" />\

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp15w"
            android:layout_marginStart="@dimen/dp15w"
            android:layout_marginTop="@dimen/dp5h"
            android:background="@color/open_gray_color"
            android:orientation="vertical">

            <CheckBox

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp5w"
                android:layout_marginStart="@dimen/dp5w"
                android:layout_marginTop="@dimen/dp15h"
                android:buttonTint="@color/colorAccent"
                android:text="@string/recieve_emails_on_helpful_resources_important_updates"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp12"
                android:textStyle="bold" />

            <CheckBox

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp15h"
                android:layout_marginEnd="@dimen/dp5w"
                android:layout_marginStart="@dimen/dp5w"
                android:layout_marginTop="@dimen/dp15h"
                android:buttonTint="@color/colorAccent"
                android:text="@string/don_t_send_any_promomtional_emails"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp12"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40h"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/dp10h"
        android:layout_marginEnd="@dimen/dp15w"
        android:layout_marginStart="@dimen/dp15w"
        android:layout_marginTop="@dimen/dp20h"
        android:background="@drawable/btn_no_corner_green"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        android:textStyle="bold" />
</RelativeLayout>